--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,24 +7,24 @@
     <title>My first webpage ! </title>
     <style>
         body{
-            background-color: blueviolet;
+            background-color: rebeccapurple;
         }
         hi{
-            color: black;
+            color: blue;
         }
     </style>
 </head>
 <body>
-    <h1>My First Webpage</h1>
-    <h2>Written with a little guidance from moringa school</h2>
+    <h1>Grace Webpage</h1>
+    <h2>Written with a little guidance from codehive akirachix</h2>
     <p>Hello, World!</p>
-    <p>Welcome to my first web page !</p>
-    <p>Here are some things I`m going to learn about coding :</p>
+    <p>Welcome to my Grace web page !</p>
+    <p>Here are some things I`m going to teach about Akirachix:</p>
     <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>And a lot more !</li>
+        <li>Moral values</li>
+        <li>Discipline</li>
+        <li>Sisterhood</li>
+        <li>And expectations</li>
     </ul>
 </body>
 </html>
